// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppBar component renders breadcrumbs if given, by default without breadcrumbsContextActionsItems 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-between">
      <oc-breadcrumb-stub class="oc-flex oc-flex-middle" contextmenupadding="small" id="files-breadcrumb" items="[object Object],[object Object]" variation="default"></oc-breadcrumb-stub>
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders breadcrumbs if given, with breadcrumbsContextActionsItems if allowed on last breadcrumb item 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-between">
      <oc-breadcrumb-stub class="oc-flex oc-flex-middle" contextmenupadding="small" id="files-breadcrumb" items="[object Object],[object Object],[object Object]" variation="default"></oc-breadcrumb-stub>
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders breadcrumbs if given, with content in the contextMenu slot 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-between">
      <oc-breadcrumb-stub class="oc-flex oc-flex-middle" contextmenupadding="small" id="files-breadcrumb" items="[object Object],[object Object],[object Object]" variation="default"></oc-breadcrumb-stub>
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders bulkActions if enabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="2 items selected. Actions are available above the table." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
        <batch-actions-stub></batch-actions-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders bulkActions not if 1 file selected 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="1 item selected. Actions are available above the table." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
        <batch-actions-stub></batch-actions-stub>
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders by default no breadcrumbs, no bulkactions, no sharesnavigation but viewoptions and sidebartoggle 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders if given, with content in the actions slot 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <button class="action-slot">Click</button>
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders if given, with content in the content slot 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
    <div class="content-slot">Foo</div>
  </div>
</div>
`;

exports[`AppBar component renders sharesNavigation if enabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-between">
      <!---->
      <shares-navigation-stub></shares-navigation-stub>
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders viewoptions and sidebartoggle neither if both are disabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <!---->
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders viewoptions and sidebartoggle only sidebartoggle if viewoptions is disabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <!---->
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders viewoptions and sidebartoggle only viewoptions if sidebartoggle is disabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes=""></view-options-stub>
        <!---->
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;

exports[`AppBar component renders viewoptions and sidebartoggle passes viewModes array to ViewOptions if displayViewModeSwitch props is enabled 1`] = `
<div class="" id="files-app-bar">
  <oc-hidden-announcer-stub announcement="No items selected." level="polite"></oc-hidden-announcer-stub>
  <div class="files-topbar oc-py-s">
    <h1 class="oc-invisible-sr">ExampleTitle</h1>
    <div class="oc-flex oc-flex-right">
      <!---->
      <!---->
      <div class="oc-flex">
        <view-options-stub viewmodes="[object Object],[object Object]"></view-options-stub>
        <sidebar-toggle-stub></sidebar-toggle-stub>
      </div>
    </div>
    <div class="files-app-bar-actions oc-mt-xs">
      <div class="oc-flex-1 oc-flex oc-flex-start">
        <!---->
      </div>
    </div>
  </div>
</div>
`;
